[patch."https://github.com/Starry-OS/arch_boot.git".arch_boot]
path = "crates/arch_boot"

[patch."https://github.com/Starry-OS/axfs_vfs.git".axfs_vfs]
path = "modules/axfs_vfs"

[profile.dev]
lto = true

[profile.release]
lto = true

[workspace]
members = [
    "apps/helloworld", "apps/monolithic",
    "modules/async_axstd", "modules/async_axtask", "modules/async_axruntime", "modules/async_arceos_api", "modules/async_taskctx", "modules/async_axfeat", "modules/async_axsync", "modules/async_axtrap", "modules/async_axhal", "modules/async_axmem", "modules/async_axfs", "modules/async_utils",
    "crates/arch_boot",
]
resolver = "2"
