[patch."https://github.com/Starry-OS/axhal.git".async_axhal]
path = "modules/async_axhal"

[profile.dev]
lto = true

[profile.release]
lto = true

[workspace]
members = [
    "apps/helloworld", 
    "apps/user_boot", 
    "apps/fs/shell",
    "modules/async_axhal",
    "modules/async_utils",
    "modules/async_io", "modules/async_std", "modules/async_fs", "modules/async_vfs", "modules/async_api", 
    "modules/async_mem", "modules/taskctx", "modules/trampoline", "modules/executor", "modules/sync", "modules/runtime", 
    "modules/arch_boot", 
    # "modules/syscall", 
    "modules/feat"
]
resolver = "2"
