[package]
name = "arch_boot"
version = "0.1.0"
edition = "2021"
authors = ["Youjie Zheng <zyj578335934@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
keywords = ["Starry"]

[features]
monolithic = ["dep:linux_syscall_api", "axtrap/monolithic"]
preempt = ["axtrap/preempt", "irq"]
smp = ["axruntime/smp"]
irq = ["axtrap/irq"]
fp_simd = []

default = []

[dependencies]
cfg-if = "1.0"
log = "0.4"
linux_syscall_api = { git = "https://github.com/Starry-OS/linux_syscall_api.git", optional = true }
axconfig = { git = "https://github.com/Starry-OS/axconfig.git" }
axalloc = { git = "https://github.com/Starry-OS/axalloc.git", optional = true }
axlog = { git = "https://github.com/Starry-OS/axlog.git" }
axruntime = { path = "../../modules/async_axruntime", package = "async_axruntime" }
axtrap = { path = "../../modules/async_axtrap", package = "async_axtrap" }
axhal = { path = "../../modules/async_axhal", package = "async_axhal" }

[build-dependencies]
axconfig = { git = "https://github.com/Starry-OS/axconfig.git" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
x86_64 = "0.14"
raw-cpuid = "11.0"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.10"
sbi-rt = { version = "0.0.2", features = ["legacy"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.3"
of = { git = "https://github.com/Starry-OS/of.git"}
tock-registers = "0.8"