[package]
name = "async_api"
version = "0.1.0"
edition = "2021"


[features]
default = []

irq = ["feat/irq"]
alloc = ["dep:axalloc", "feat/alloc"]
multitask = ["feat/multitask"]
fs = ["dep:async_fs", "feat/fs"]
# net = ["dep:axnet", "feat/net"]
# display = ["dep:axdisplay", "feat/display"]

# myfs = ["feat/myfs"]

# # Use dummy functions if the feature is not enabled
# dummy-if-not-enabled = []

[dependencies]
axconfig = { git = "https://github.com/Starry-OS/axconfig.git" }
axlog = { git = "https://github.com/Starry-OS/axlog.git" }
axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
axalloc = { git = "https://github.com/Starry-OS/axalloc.git", optional = true }
axnet = { git = "https://github.com/Starry-OS/axnet.git", optional = true }
axdisplay = { git = "https://github.com/Starry-OS/axdisplay.git", optional = true }

runtime = { path = "../runtime" }
feat = { path = "../feat" }
trampoline = { path = "../trampoline" }
async_io = { path = "../async_io" }
axhal = { path = "../async_axhal", package = "async_axhal" }
sync = { path = "../sync" }
async_fs = { path = "../async_fs", optional = true }
