[package]
name = "async_arceos_api"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Public APIs and types for ArceOS modules"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/api/arceos_api"
documentation = "https://rcore-os.github.io/arceos/arceos_api/index.html"
keywords = ["Starry"]

[features]
default = []

irq = ["axfeat/irq"]
alloc = ["dep:axalloc", "axfeat/alloc"]
multitask = ["axtask/multitask", "axfeat/multitask"]
fs = ["dep:axfs", "axfeat/fs"]
net = ["dep:axnet", "axfeat/net"]
display = ["dep:axdisplay", "axfeat/display"]

myfs = ["axfeat/myfs"]

# Use dummy functions if the feature is not enabled
dummy-if-not-enabled = []

[dependencies]
axconfig = { git = "https://github.com/Starry-OS/axconfig.git" }
axlog = { git = "https://github.com/Starry-OS/axlog.git" }
axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
axhal = { git = "https://github.com/Starry-OS/axhal.git" }
axalloc = { git = "https://github.com/Starry-OS/axalloc.git", optional = true }
axfs = { git = "https://github.com/Starry-OS/axfs.git", optional = true }
axnet = { git = "https://github.com/Starry-OS/axnet.git", optional = true }
axdisplay = { git = "https://github.com/Starry-OS/axdisplay.git", optional = true }

axruntime = { path = "../async_axruntime", package = "async_axruntime" }
axfeat = { path = "../async_axfeat", package = "async_axfeat" }
axtask = { path = "../async_axtask", package = "async_axtask" }
axio = { path = "../async_axio", package = "async_axio" }
