[package]
name = "async_axfeat"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Top-level feature selection for ArceOS"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/api/axfeat"
documentation = "https://rcore-os.github.io/arceos/axfeat/index.html"
keywords = ["Starry"]

[features]
default = []

monolithic = []
img = ["axruntime/img"]

# Multicore
smp = ["axhal/smp", "axruntime/smp", "spinlock/smp"]

# Interrupts
irq = ["axhal/irq", "axruntime/irq", "axtask?/irq"]

# Memory
alloc = ["axalloc", "axruntime"]
alloc-tlsf = ["axalloc/tlsf"]
alloc-slab = ["axalloc/slab"]
alloc-buddy = ["axalloc/buddy"]
paging = ["alloc", "axhal/paging", "axruntime/paging"]
tls = ["alloc", "axhal/tls", "axtask?/tls"]

# Multi-threading and scheduler
multitask = ["alloc", "axtask/multitask", "axsync", "axruntime/multitask"]
sched_fifo = ["axtask/sched_fifo"]
sched_rr = ["axtask/sched_rr", "irq"]
sched_cfs = ["axtask/sched_cfs", "irq"]

# File system
fs = ["alloc", "paging", "axdriver/virtio-blk", "dep:async_fs", "axruntime/fs"] # TODO: try to remove "paging"
fatfs = ["async_fs/fatfs"]
# lwext4_rust = ["axfs/lwext4_rust"]
# myfs = ["axfs?/myfs"]
# ext4_rs = ["axfs/ext4_rs"]

# Networking
net = ["alloc", "paging", "axdriver/virtio-net", "dep:axnet", "axruntime/net"]

# Display
display = ["alloc", "paging", "axdriver/virtio-gpu", "dep:axdisplay", "axruntime/display"]

# Device drivers
bus-mmio = ["axdriver?/bus-mmio"]
bus-pci = ["axdriver?/bus-pci"]
# driver-ramdisk = ["axdriver?/ramdisk", "async_fs?/use-ramdisk"]
driver-ixgbe = ["axdriver?/ixgbe"]
driver-e1000 = ["axdriver?/e1000"]
driver-bcm2835-sdhci = ["axdriver?/bcm2835-sdhci"]

# Logging
log-level-off = ["axlog/log-level-off"]
log-level-error = ["axlog/log-level-error"]
log-level-warn = ["axlog/log-level-warn"]
log-level-info = ["axlog/log-level-info"]
log-level-debug = ["axlog/log-level-debug"]
log-level-trace = ["axlog/log-level-trace"]

[dependencies]
axlog = { git = "https://github.com/Starry-OS/axlog.git" }
axalloc = { git = "https://github.com/Starry-OS/axalloc.git", optional = true }
axdriver = { git = "https://github.com/Starry-OS/axdriver.git", optional = true }
axnet = { git = "https://github.com/Starry-OS/axnet.git", optional = true }
axdisplay = { git = "https://github.com/Starry-OS/axdisplay.git", optional = true }
spinlock = { git = "https://github.com/Starry-OS/spinlock.git", optional = true }

axruntime = { path = "../runtime", package = "runtime", optional = true }
# axtask = { path = "../async_axtask", package = "async_axtask", optional = true }
axtask = { path = "../async_executor", package = "async_executor", optional = true }
taskctx = { path = "../async_taskctx", package = "async_taskctx", optional = true }
axhal = { path = "../async_axhal", package = "async_axhal" }
async_fs = { path = "../async_fs", package = "async_fs", optional = true }
axsync = { path = "../async_sync", package = "async_sync", optional = true }
