[package]
name = "async_axio"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "`std::io`-like I/O traits for `no_std` environment"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/crates/axio"
documentation = "https://rcore-os.github.io/arceos/axio/index.html"
keywords = ["Starry"]

[features]
alloc = []
default = []

[dependencies]
axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
pin-project-lite = "0.2.14"
libc = { version = "0.2.158", default-features = false }
memchr = { version = "2.7.4", default-features = false, features = ["alloc"] }
futures-core = { version = "0.3.30", default-features = false, features = ["alloc"] }