[package]
name = "async_axruntime"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Runtime library of ArceOS"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/modules/axruntime"
documentation = "https://rcore-os.github.io/arceos/axruntime/index.html"
keywords = ["Starry"]

[features]
default = []

smp = ["axhal/smp"]
irq = ["axhal/irq", "axtask/irq", "percpu", "kernel_guard"]
tls = ["axhal/tls", "axtask/tls"]
alloc = ["axalloc"]
paging = ["axhal/paging", "lazy_init"]

multitask = ["axtask/multitask"]
fs = ["axdriver", "async_fs"]
net = ["axdriver", "axnet"]
display = ["axdriver", "axdisplay"]
img = ["axdriver/img", "paging"]

[dependencies]
cfg-if = "1.0"
axlog = { git = "https://github.com/Starry-OS/axlog.git" }
axconfig = { git = "https://github.com/Starry-OS/axconfig.git" }
axalloc = { git = "https://github.com/Starry-OS/axalloc.git", optional = true }
axdriver = { git = "https://github.com/Starry-OS/axdriver.git", optional = true }
axnet = { git = "https://github.com/Starry-OS/axnet.git", optional = true }
axdisplay = { git = "https://github.com/Starry-OS/axdisplay.git", optional = true }
crate_interface = { git = "https://github.com/Starry-OS/crate_interface.git" }
percpu = { git = "https://github.com/Starry-OS/percpu.git", optional = true }
kernel_guard = { git = "https://github.com/Starry-OS/kernel_guard.git", optional = true }
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git", optional = true }

axtask = { path = "../async_axtask", package = "async_axtask" }
axhal = { path = "../async_axhal", package = "async_axhal" }

async_utils = { path = "../async_utils"}
async_fs = { path = "../async_fs", optional = true }