[package]
name = "async_axtrap"
version = "0.1.0"
edition = "2021"
keywords = ["Starry", "trap", "arch"]
description = "Trap handling module over different architectures"
authors = ["Youjie Zheng <zyj578335934@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
monolithic = ["dep:linux_syscall_api"]
irq = []
preempt = ["axtask/preempt", "percpu/preempt", "kernel_guard/preempt"]

[dependencies]
axlog = { git = "https://github.com/Starry-OS/axlog.git" }
cfg-if = "1.0"
log = "0.4"
linux_syscall_api = { git = "https://github.com/Starry-OS/linux_syscall_api.git", optional = true }
handler_table = { git = "https://github.com/Starry-OS/handler_table.git" }
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
kernel_guard = { git = "https://github.com/Starry-OS/kernel_guard.git" }
percpu = { git = "https://github.com/Starry-OS/percpu.git" }
axhal = { path = "../async_axhal", package = "async_axhal" }
axtask = { path = "../async_axtask", package = "async_axtask", optional = true }


[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
x86_64 = "0.15"

[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.10"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.3"
tock-registers = "0.8"