[package]
name = "async_executor"
version = "0.1.0"
edition = "2021"

[dependencies]
spinlock = { git = "https://github.com/Starry-OS/spinlock.git" }
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
axlog = { git = "https://github.com/Starry-OS/axlog.git" }
axconfig = { git = "https://github.com/Starry-OS/axconfig.git"}
riscv = "0.10"
elf_parser = { git = "https://github.com/Starry-OS/elf_parser.git" }
xmas-elf = "0.9.0"

async_io = { path = "../async_io"}
axfs = { path = "../async_fs", package = "async_fs" }
# axmem = { path = "../async_axmem", package = "async_axmem" }
axsync = { path = "../async_sync", package = "async_sync" }
async_axtask = { path = "../async_axtask" }
axhal = { path = "../async_axhal", package = "async_axhal" }
