[package]
name = "async_fs"
version = "0.1.0"
edition = "2021"

[features]
fatfs = ["dep:fatfs"]
default = ["fatfs"]


[dependencies]
log = "0.4"
cfg-if = "1.0"
async_io = { path = "../async_io" }
async_vfs = { path = "../async_vfs" }
async_sync = { path = "../async_sync" }
axdriver = { git = "https://github.com/Starry-OS/axdriver.git", features = ["block"] }
axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
capability = { git = "https://github.com/Starry-OS/capability.git" }
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
bitflags = "2.6"
futures-core = { version = "0.3.30", default-features = false, features = ["alloc"] }


[dependencies.fatfs]
git = "https://github.com/rafalh/rust-fatfs"
rev = "85f06e0"
optional = true
default-features = false
features = [ # no std
    "alloc",
    "lfn",
    "log_level_trace",
    "unicode",
]