[package]
name = "async_io"
version = "0.1.0"
edition = "2021"

[dependencies]
axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
pin-project-lite = "0.2.14"
futures-core = { version = "0.3.30", default-features = false, features = ["alloc"] }
memchr = { version = "2.3.3", default-features = false }
log = "0.4"