[package]
name = "async_mem"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
axalloc = { git = "https://github.com/Starry-OS/axalloc.git" }
axconfig = { git = "https://github.com/Starry-OS/axconfig.git" }
axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
spinlock = { git = "https://github.com/Starry-OS/spinlock.git" }
xmas-elf = "0.9.0"
riscv = "0.10"
page_table_entry = { git = "https://github.com/Starry-OS/page_table_entry.git" }
elf_parser = { git = "https://github.com/Starry-OS/elf_parser.git" }

axhal = { path = "../async_axhal", package = "async_axhal", features = ["paging"] }
async_fs = { path = "../async_fs" }
async_io = { path = "../async_io" }
async_sync = { path = "../async_sync" }
