[package]
name = "async_std"
version = "0.1.0"
edition = "2021"

[features]

monolithic = ["feat/monolithic"]

img = ["feat/img"]

# Multicore
smp = ["feat/smp"]

# Interrupts
irq = ["async_api/irq", "feat/irq"]

# Memory
alloc = ["async_api/alloc", "feat/alloc"]
alloc-tlsf = ["feat/alloc-tlsf"]
alloc-slab = ["feat/alloc-slab"]
alloc-buddy = ["feat/alloc-buddy"]
# paging = ["feat/paging"]
# tls = ["feat/tls"]

# Multi-threading and scheduler
multitask = ["async_api/multitask", "feat/multitask"]
sched_fifo = ["feat/sched_fifo"]
sched_rr = ["feat/sched_rr"]
sched_cfs = ["feat/sched_cfs"]

# File system
fs = ["async_api/fs", "feat/fs"]
# myfs = ["async_api/myfs", "feat/myfs"]
fatfs = ["feat/fatfs"]
# lwext4_rust = ["feat/lwext4_rust", "fs"]

# # Networking
# net = ["async_api/net", "feat/net"]
# dns = []

# # Display
# display = ["async_api/display", "feat/display"]

# # Device drivers
# bus-mmio = ["feat/bus-mmio"]
# bus-pci = ["feat/bus-pci"]
# driver-ramdisk = ["axfeat/driver-ramdisk"]
# driver-ixgbe = ["feat/driver-ixgbe"]
# driver-bcm2835-sdhci = ["feat/driver-bcm2835-sdhci"]

# Logging
log-level-off = ["feat/log-level-off"]
log-level-error = ["feat/log-level-error"]
log-level-warn = ["feat/log-level-warn"]
log-level-info = ["feat/log-level-info"]
log-level-debug = ["feat/log-level-debug"]
log-level-trace = ["feat/log-level-trace"]


[dependencies]
axlog = { git = "https://github.com/Starry-OS/axlog.git" }
futures-core = { version = "0.3.30", default-features = false, features = ["alloc"] }
pin-project-lite = "0.2.14"
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }

axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
spinlock = { git = "https://github.com/Starry-OS/spinlock.git" }

arch_boot = { path = "../arch_boot" }
feat = { path = "../feat", package = "feat" }
async_api = { path = "../async_api" }
async_utils = { path = "../async_utils"}
async_io = { path = "../async_io"}
sync = { path = "../sync" }
axhal = { path = "../async_axhal", package = "async_axhal"}
trampoline = { path = "../trampoline" }
