[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[features]
irq = ["sync/irq"]

preempt = ["irq", "percpu/preempt", "kernel_guard/preempt", "taskctx/preempt"]

sched_fifo = ["taskctx/sched_fifo"]
sched_rr = ["taskctx/sched_rr"]
sched_cfs = ["taskctx/sched_cfs"]

[dependencies]
spinlock = { git = "https://github.com/Starry-OS/spinlock.git" }
axlog = { git = "https://github.com/Starry-OS/axlog.git" }
axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
elf_parser = { git = "https://github.com/Starry-OS/elf_parser.git" }
axconfig = { git = "https://github.com/Starry-OS/axconfig.git"}
percpu = { git = "https://github.com/Starry-OS/percpu.git", optional = true }
kernel_guard = { git = "https://github.com/Starry-OS/kernel_guard.git", optional = true }
axsignal = { git = "https://github.com/Starry-OS/axsignal.git" }
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
xmas-elf = "0.9.0"
bitflags = "2.6"


sync = { path = "../sync" }
taskctx = { path = "../taskctx" }
async_mem = { path = "../async_mem" }
async_io = { path = "../async_io"}
async_fs = { path = "../async_fs" }
axhal = { path = "../async_axhal", package = "async_axhal" }
riscv = "0.10"
