[package]
name = "trampoline"
version = "0.1.0"
edition = "2021"

[features]
default = ["multitask"]

multitask = []

monolithic = []

irq = ["sync/irq", "executor/irq", "async_axhal/irq"]

smp = ["spinlock/smp"]

preempt = ["irq", "percpu/preempt", "kernel_guard/preempt", "executor/preempt"]

sched_fifo = ["multitask", "executor/sched_fifo"]
sched_rr = ["multitask", "executor/sched_rr", "preempt"]
sched_cfs = ["multitask", "executor/sched_cfs", "preempt"]

[dependencies]
log = "0.4"
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
spinlock = { git = "https://github.com/Starry-OS/spinlock.git" }
kernel_guard = { git = "https://github.com/Starry-OS/kernel_guard.git" }
percpu = { git = "https://github.com/Starry-OS/percpu.git", optional = true }
axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
axconfig = { git = "https://github.com/Starry-OS/axconfig.git"}
futures-core = { version = "0.3.30", default-features = false, features = ["alloc"] }

sync = { path = "../sync" }
taskctx = { path = "../taskctx" }
executor = { path = "../executor" }
async_axhal = { path = "../async_axhal" }
syscall = { path = "../syscall" }
async_mem = { path = "../async_mem" }
async_fs = { path = "../async_fs" }


[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.11"
