[package]
name = "trampoline"
version = "0.1.0"
edition = "2021"

[features]
default = ["multitask"]

multitask = []

monolithic = []

irq = ["sync/irq", "executor/irq", "async_axhal/irq"]

smp = ["spinlock/smp"]

preempt = ["irq", "percpu/preempt", "kernel_guard/preempt", "executor/preempt"]

sched_fifo = ["multitask", "executor/sched_fifo"]
sched_rr = ["multitask", "executor/sched_rr", "preempt"]
sched_cfs = ["multitask", "executor/sched_cfs", "preempt"]

[dependencies]
log = "0.4"
lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
spinlock = { git = "https://github.com/Starry-OS/spinlock.git" }
kernel_guard = { git = "https://github.com/Starry-OS/kernel_guard.git" }
percpu = { git = "https://github.com/Starry-OS/percpu.git", optional = true }
axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
axconfig = { git = "https://github.com/Starry-OS/axconfig.git"}
futures-core = { version = "0.3.30", default-features = false, features = ["alloc"] }
spin = "0.9"

sync = { path = "../sync" }
taskctx = { path = "../taskctx" }
executor = { path = "../executor" }
async_axhal = { path = "../async_axhal" }
syscall = { path = "../syscall" }
async_mem = { path = "../async_mem" }
async_fs = { path = "../async_fs" }


[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
riscv = "0.11"

cfg-if = "1.0"
axlog = { git = "https://github.com/Starry-OS/axlog.git" }
# axnet = { git = "https://github.com/Starry-OS/axnet.git" }
axsignal = { git = "https://github.com/Starry-OS/axsignal.git" }
axconfig = { git = "https://github.com/Starry-OS/axconfig.git" }
# axfutex = { git = "https://github.com/Starry-OS/axfutex.git"}
numeric-enum-macro = { git = "https://github.com/mexus/numeric-enum-macro" }
bitflags = "2.6"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
num_enum = { version = "0.5.11", default-features = false }
async-trait = "0.1.83"

async_io = { path = "../async_io" }
